// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`reducer: articleDetail handles LOAD 1`] = `
Immutable.Map {
  "article": Immutable.Map {
    "id": "AV9mEFX2yCdS-nWhuiPu",
    "replyRequestCount": 1,
    "createdAt": "2017-10-29T02:57:47.509Z",
    "user": null,
    "text": "請問這偏文章是正確嗎？",
  },
  "replyConnections": Immutable.List [
    Immutable.Map {
      "articleId": "article1",
      "replyId": "reply1",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "reply1",
        "type": "NOT_ARTICLE",
        "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:19:56.782Z",
    },
  ],
  "relatedArticles": Immutable.List [
    Immutable.Map {
      "id": "article1",
    },
    Immutable.Map {
      "id": "article2",
      "text": "~~黎建南給退休軍公教人員的一封公開信~~",
    },
  ],
  "relatedReplies": Immutable.List [
    Immutable.Map {
      "id": "relatedReply1",
      "type": "RUMOR",
      "text": "醫師聽聞後都斥為無稽之談",
      "article": Immutable.Map {
        "id": "article1",
      },
    },
    Immutable.Map {
      "id": "relatedReply2",
      "type": "RUMOR",
      "text": "喝冰水跟罹癌根本是兩回事",
      "article": Immutable.Map {
        "id": "article1",
      },
    },
  ],
  "searchArticles": Immutable.List [],
  "searchReplies": Immutable.List [],
}
`;

exports[`reducer: articleDetail handles LOAD_AUTH 1`] = `
Immutable.List [
  Immutable.Map {
    "articleId": "article1",
    "replyId": "reply1",
    "canUpdateStatus": true,
    "status": "NORMAL",
    "reply": Immutable.Map {
      "id": "reply1",
      "type": "NOT_ARTICLE",
      "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
    },
    "feedbacks": Immutable.List [],
    "user": Immutable.Map {
      "id": "AVqVwjqQyrDaTqlmmp_a",
      "name": null,
      "avatarUrl": null,
    },
    "createdAt": "2017-10-29T03:19:56.782Z",
  },
]
`;

exports[`reducer: articleDetail handles SET_STATE 1`] = `
Immutable.Map {
  "isLoading": true,
  "isAuthLoading": false,
  "isReplyLoading": false,
}
`;

exports[`reducer: articleDetail handles partial LOAD 1`] = `
Immutable.Map {
  "article": Immutable.Map {
    "id": "AV9mEFX2yCdS-nWhuiPu",
    "replyRequestCount": 1,
    "createdAt": "2017-10-29T02:57:47.509Z",
    "user": null,
    "text": "請問這偏文章是正確嗎？",
  },
  "replyConnections": Immutable.List [
    Immutable.Map {
      "id": "reply1",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "AV9mN3dDyCdS-nWhuiP3",
        "user": Immutable.Map {
          "id": "AVqVwjqQyrDaTqlmmp_a",
          "name": null,
          "avatarUrl": null,
        },
        "type": "NOT_ARTICLE",
        "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
        "reference": "",
        "createdAt": "2017-10-29T03:40:31.938Z",
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:40:31.942Z",
    },
    Immutable.Map {
      "id": "reply2",
      "canUpdateStatus": true,
      "status": "NORMAL",
      "reply": Immutable.Map {
        "id": "AV9mJJ5qyCdS-nWhuiPz",
        "user": Immutable.Map {
          "id": "AVqVwjqQyrDaTqlmmp_a",
          "name": null,
          "avatarUrl": null,
        },
        "type": "NOT_ARTICLE",
        "text": "文字長度太短，疑似為使用者手動輸入之查詢語句，不像轉傳文章。",
        "reference": "",
        "createdAt": "2017-10-29T03:19:56.776Z",
      },
      "feedbacks": Immutable.List [],
      "user": Immutable.Map {
        "id": "AVqVwjqQyrDaTqlmmp_a",
        "name": null,
        "avatarUrl": null,
      },
      "createdAt": "2017-10-29T03:19:56.782Z",
    },
  ],
  "relatedArticles": Immutable.List [
    Immutable.Map {
      "id": "article1",
    },
    Immutable.Map {
      "id": "article2",
      "text": "~~黎建南給退休軍公教人員的一封公開信~~",
    },
  ],
  "relatedReplies": Immutable.List [
    Immutable.Map {
      "id": "relatedReply1",
      "type": "RUMOR",
      "text": "醫師聽聞後都斥為無稽之談",
      "article": Immutable.Map {
        "id": "article1",
      },
    },
    Immutable.Map {
      "id": "relatedReply2",
      "type": "RUMOR",
      "text": "喝冰水跟罹癌根本是兩回事",
      "article": Immutable.Map {
        "id": "article1",
      },
    },
  ],
  "searchArticles": Immutable.List [],
  "searchReplies": Immutable.List [],
}
`;
